--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
