--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.0.0",
     "react-error-boundary": "^3.1.4",
     "react-hook-form": "^7.29.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-select": "^5.7.4",
@@ -22,6 +23,7 @@
     "sass": "^1.63.3",
     "slugify": "^1.6.6",
     "styled-components": "^5.3.5",
+    "sweetalert2": "^11.7.27",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
