--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "^0.26.1",
     "firebase": "^9.6.10",
     "html-react-parser": "^5.0.6",
@@ -20,6 +21,7 @@
     "react-paginate": "^8.2.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.3.0",
+    "react-router-scroll-to-top": "^1.2.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.7.4",
     "react-toastify": "^8.2.0",
@@ -27,6 +29,7 @@
     "slugify": "^1.6.6",
     "styled-components": "^5.3.5",
     "sweetalert2": "^11.7.27",
+    "swiper": "^11.0.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
